--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,61 @@
 /**
- * Parallax Scrolling Tutorial
- * For Smashing Magazine
- * July 2011
- *  
- * Author: Richard Shepherd
- *		   www.richardshepherd.com
- * 		   @richardshepherd   
- */
+ * @file css for index
+*/
 
 
 article h2 { font-family: 'Lobster Two'; font-size: 60px; margin: 25px 0; line-height: 1em; }
 
 .story { height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; border-top: 1px solid rgba(255,255,255,0.3); border-bottom: 1px solid rgba(0,0,0,0.4); box-shadow: 0 0 50px rgba(0,0,0,0.8);}
 
-#first { background: url(../images/puckered.png) 50% 0 no-repeat fixed; }
-#second { background: url(../images/slide2.jpg) 50% 0 no-repeat fixed; }
+#first { background: url(../res/bg_cloud.png) 50% 0 no-repeat fixed;background-color:#C0DEED }
+#second { background: url(../res/bg_2.png) 50% 0 no-repeat fixed; }
 #fourth { background: url(../images/slide3.jpg) 50% 0 no-repeat fixed; }
 #third { background: url(../images/slide4.jpg) 50% 0 no-repeat fixed; }
 #theend { background: url(../images/puckered.png) 50% bottom no-repeat fixed; }
 
 /* Introduction */
-#first .smashinglogo { background: url(../images/smashing-logo.png) 50% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
-#first article { width: 100%; top: 300px; position: absolute; text-align: center; }
-#first article p,
+#first .mp3 { 
+    
+}
+#first .smashinglogo { background: url(../res/sprit/s1_fly.png) 5% 10px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; background-size:426px 544px;}
+#first .smashinglogo2 { background: url(../res/sprit/s1_2.jpg) left top no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; background-size:426px 544px;}
+
+#first article { width: 100%; top: 300px; position: absolute; text-align: right; }
+#first article p {margin-right: 100px;color: #ccc;}
 #first article a { color: #ccc; }
 #first article a { text-decoration: underline; }
 #first article a:hover { color: #fff; }
+#first .text-block {position: absolute; right: 40px; top: 550px;width: 300px; border-radius: 5px; background:#fff;z-index: 999;padding: 15px; line-height: 36px;color:#0084B4;font-size:16px;}
+#first .img-block {position: absolute; right: 400px; top: 550px;width: 300px; border-radius: 5px; background:#fff;z-index: 999;padding: 15px; color:#0084B4;font-size:16px;}
 
 /* Background Only */
+.dark-text {
+    background:url(../images/grain.png) repeat #333; color: #fff; width: 445px;  padding: 16px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1);
+}
 #second { padding: 50px 0;}
-#second article { background: url(../images/grain.png) repeat #333; color: #fff; width: 445px; margin-left: 100px; padding: 10px 20px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
-#second article p { margin-bottom: 25px; }
+#second article {   position:absolute;left: 40px;top: 50px;}
+#second article p { margin-bottom: 25px;font-size: 16px; }
+
 #second article a { color: #ff0;}
+#second .img { background: url(../res/sprit/s2_3.png) 70% top no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; background-size:426px 544px;}
 
 /* Photograph */
-#third article {  background: url(../images/grain.png) repeat #333; color: #fff; padding: 10px 20px; margin: 100px 0 0 60%; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; color: #fff; position: absolute; top: 0; box-shadow: 0 0 25px rgba(0,0,0,0.3); border: 1px solid rgba(150,150,150,0.1); }
-#third .photograph { background: url(../images/photo.png) transparent 40% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
-#third article p { width: 300px; margin-bottom: 25px; }
+#third article {   margin: 100px 0 0 60%; position: absolute; top: 0;  }
+#third .photograph { background: url(../res/sprit/s3_1.png) transparent 40% 100px no-repeat fixed; min-height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
+#third article p { width: 300px; margin-bottom: 25px;font-size: 16px }
 
 /* HTML5 Video */
-#fourth article {  margin-left: 10%; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; color: #fff; position: absolute; top: 0; }
-#fourth article p { width: 300px; margin: 50px 0; }
-#fourth video { position: fixed; left: 50%; box-shadow: 0 0 25px rgba(0,0,0,0.7); z-index: 1;}
+#fourth article {  margin-left: 10%; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; color: #fff; position: absolute; top: 100px; }
+#fourth article p { width: 300px; margin: 50px 0; font-size: 16px;}
+#fourth img {top: 100px; position: absolute; left: 50%; box-shadow: 0 0 25px rgba(0,0,0,0.7); z-index: 100;}
+
+#fourth .photograph { background: url(../res/sprit/s4_1.jpg) right 10px no-repeat fixed; min-height: 1000px; height: 100%;padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; background-size:640px 480px;}
 
 /* The End */
 #theend .byebye { background: url(../images/theend.png) 40% 100px no-repeat fixed; height: 1000px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: relative; margin: 0 auto; }
 
 
+#theend article {  left: 50%;margin-left: -153px; text-shadow: 0 -1px 0 rgba(0,0,0,0.5); line-height: 1.5em; color: #fff; position: absolute; top: 380px; width: 400px;text-align:center }
+#theend article p { width: 300px; margin: 50px 0; font-size: 16px;}
+#theend textarea {width: 300px; height:200px;}
+#theend .center {width:100px; padding-top:30px;text-align:center; margin: 0 auto;}
